# tax-tool

./: README.md  test-calculation.xlsx
calculation/: README.md  calculation.py  datacleaner.py  datastructures.py  overview.py  priceretriever.py  pricestorer.py  pyproject.toml  readers.py  requirements.txt  rest_interface.py  tax_info.xlsx  tax_info_test.xlsx  variables.py  visualization.py  writer.py
calculation/analysis/: market_data_analysis.ipynb
calculation/coin_data/: Bitcoin_historical_data_2021-11-15.json  Litecoin_historical_data_2021-11-15.json  coins_market_data.json  missing_market_data.json  supported_coins.json  supported_coins_raw.json
calculation/src/: db.sqlite3
calculation/src/rest/: settings.py  urls.py
calculation/src/rest/calculations/: calculation.py  datacleaner.py  overview.py  readers.py  tax_info.xlsx
calculation/src/rest/rest_interface/: views.py
calculation_copy/: calculation.py  datacleaner.py  writer.py
calculation_objects/: calculator.py  datacleaner.py  datastructures.py  overview.py  readers.py  variables.py  writer.py
file_holder/: CoinbaseCSV - Copy.csv  CoinbaseCSV - Empty.csv
files/: BinanceXLSX.xlsx  Binance_Order_History_Spot.xlsx  CoinbaseCSV.csv  test_upload_file.xlsx
src_test/: overview.py
src_test/calculator/: ProfitCalculator.py
src_test/calculator/price_retriever/: PriceRetriever.py
src_test/filehandling/filereader/: FileReader.py
src_test/filehandling/filereading/: TransactionCleaner.py
src_test/filewriter/: ExcelWriter.py
webapp/: package-lock.json  package.json
webapp/src/app/: index.tsx
(+7 files in other folders)
