[tool.poetry]
name = "calculation"
version = "0.1.0"
description = ""
authors = ["Henrik <henrrb@stud.ntnu.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
xlsxwriter = "^3.0.5"
uvicorn = "^0.20.0"
fastapi = "^0.89.0"
python-multipart = "^0.0.5"
requests = "^2.28.2"
bs4 = "^0.0.1"
lxml = "^4.9.2"
html5lib = "^1.1"
selenium = "^4.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
